Fixed nav bar alignment on mobile

--- a/assets/ananke/css/teaching.css
+++ b/assets/ananke/css/teaching.css
@@ -17,7 +17,7 @@
 
 .current-teaching-header-text {
   font-family: 'BrittanySignature';
-  font-size: 50px;
+  font-size: 40px;
   color: white;
   text-align: left;
   margin: 0; /* Remove default margin */
@@ -41,7 +41,7 @@
 
 .past-teaching-header-text {
   font-family: 'BrittanySignature';
-  font-size: 50px;
+  font-size: 40px;
   color: white;
   text-align: left;
   margin: 0; /* Remove default margin */
